--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
       </div>
     </section>
 
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=MuRt657tliSC1Morg-5thqC7imWQ_6pAPYN0FnTELcc"></script>
+    <a href="http://www.clustrmaps.com/map/Freelankarx.github.io/Freelankarx/" title="Visit tracker for Freelankarx.github.io/Freelankarx/"><img src="//www.clustrmaps.com/map_v2.png?d=MuRt657tliSC1Morg-5thqC7imWQ_6pAPYN0FnTELcc" /></a>
+
     <!-- Services Section -->
     <section id="services" class="section">
       <h2>My Services</h2>
