--- a/index.html
+++ b/index.html
@@ -529,41 +529,30 @@ Paste this entire code in your index.html before </body>
     const name = document.getElementById('chat-name').value;
     const email = document.getElementById('chat-email').value;
     const message = document.getElementById('chat-message').value;
-    const apiKey = "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";
 
     const body = document.getElementById('freelankarx-body');
+    if (!message.trim()) return alert("Please enter a message.");
+
     body.innerHTML += `<p><strong>You:</strong> ${message}</p>`;
+    body.innerHTML += `<p><em>Thinking...</em></p>`;
 
-    const response = await fetch("https://api.openai.com/v1/chat/completions", {
-      method: "POST",
-      headers: {
-        "Authorization": `Bearer ${apiKey}`,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        model: "gpt-4",
-        messages: [
-          { role: "system", content: "You are a helpful Shopify/dropshipping expert assistant." },
-          { role: "user", content: message }
-        ]
-      })
-    });
-    const data = await response.json();
-    const reply = data.choices?.[0]?.message?.content || "Sorry, I couldn’t answer that.";
-    body.innerHTML += `<p><strong>Freelankarx AI:</strong> ${reply}</p>`;
+    try {
+      const response = await fetch("https://your-render-app-name.onrender.com/chat", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ message, email })
+      });
+      const data = await response.json();
+      const reply = data.reply || "Sorry, I couldn’t answer that.";
 
-    // Send to your email (use Formspree)
-    fetch("https://formspree.io/f/mnqeydbr", {
-      method: "POST",
-      headers: { 'Accept': 'application/json' },
-      body: new FormData(Object.assign(document.createElement('form'), {
-        elements: [
-          Object.assign(document.createElement('input'), { name: 'Name', value: name }),
-          Object.assign(document.createElement('input'), { name: 'Email', value: email }),
-          Object.assign(document.createElement('textarea'), { name: 'Message', value: message + "\n\nGPT Reply: " + reply })
-        ]
-      }))
-    });
+      // Replace "Thinking..." with actual reply
+      const allParas = body.querySelectorAll('p');
+      allParas[allParas.length - 1].innerHTML = `<strong>Freelankarx AI:</strong> ${reply}`;
+
+    } catch (error) {
+      const allParas = body.querySelectorAll('p');
+      allParas[allParas.length - 1].innerHTML = `<strong>Freelankarx AI:</strong> Something went wrong.`;
+    }
   });
 </script>
 
