--- a/index.html
+++ b/index.html
@@ -436,16 +436,16 @@
 Paste this entire code in your index.html before </body>
 -->
 
-<!-- Floating Chatbot Widget -->
+<!-- === Freelankarx Assistant V2 === -->
 <style>
-  #freelankarx-chatbot {
+  #freelankarx-assistant {
     position: fixed;
-    bottom: 20px;
+    bottom: 80px;
     right: 20px;
     z-index: 9999;
     font-family: 'Segoe UI', sans-serif;
   }
-  #freelankarx-toggle {
+  #flx-toggle {
     background-color: #2c2c2c;
     color: white;
     border: none;
@@ -456,105 +456,135 @@ Paste this entire code in your index.html before </body>
     cursor: pointer;
     box-shadow: 0 4px 20px rgba(0,0,0,0.2);
   }
-  #freelankarx-window {
+  #flx-window {
     display: none;
     width: 320px;
-    height: 450px;
+    height: 500px;
     background: #0f172a;
     color: white;
     border-radius: 15px;
-    overflow: hidden;
+    overflow-y: auto;
     flex-direction: column;
     box-shadow: 0 0 15px rgba(0,0,0,0.5);
-  }
-  #freelankarx-header {
     padding: 10px;
-    background-color: #1e293b;
-    font-weight: bold;
-    font-size: 16px;
-    text-align: center;
   }
-  #freelankarx-body {
-    flex: 1;
+  #flx-window .msg {
+    margin: 8px 0;
     padding: 10px;
-    overflow-y: auto;
+    border-radius: 10px;
+    max-width: 90%;
   }
-  #freelankarx-inputs {
-    padding: 10px;
+  .msg-bot {
     background: #1e293b;
-    display: flex;
-    flex-direction: column;
+    align-self: flex-start;
   }
-  #freelankarx-inputs input,
-  #freelankarx-inputs textarea {
+  .msg-user {
+    background: #38bdf8;
+    color: black;
+    align-self: flex-end;
+  }
+  #flx-input {
+    margin-top: 10px;
+  }
+  select, input {
+    width: 100%;
     margin: 5px 0;
     padding: 8px;
     border: none;
     border-radius: 5px;
   }
-  #freelankarx-send {
+  button.submit-btn {
+    width: 100%;
+    padding: 8px;
     background: #38bdf8;
     color: black;
     font-weight: bold;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
+    margin-top: 5px;
   }
 </style>
 
-<div id="freelankarx-chatbot">
-  <button id="freelankarx-toggle">💬</button>
-  <div id="freelankarx-window">
-    <div id="freelankarx-header">Freelankarx AI Assistant</div>
-    <div id="freelankarx-body">
-      <p>Hello! 👋 Need help with dropshipping, store setup or product ideas? Ask me anything.</p>
-    </div>
-    <div id="freelankarx-inputs">
-      <input type="text" id="chat-name" placeholder="Your name">
-      <input type="email" id="chat-email" placeholder="Your email">
-      <textarea id="chat-message" placeholder="Type your message here..."></textarea>
-      <button id="freelankarx-send">Send & Ask</button>
-    </div>
-  </div>
+<div id="freelankarx-assistant">
+  <button id="flx-toggle">💬</button>
+  <div id="flx-window"></div>
 </div>
 
 <script>
-  const toggle = document.getElementById('freelankarx-toggle');
-  const windowBox = document.getElementById('freelankarx-window');
+const assistant = document.getElementById('flx-window');
+const toggle = document.getElementById('flx-toggle');
+toggle.onclick = () => {
+  assistant.style.display = assistant.style.display === 'flex' ? 'none' : 'flex';
+  assistant.style.flexDirection = 'column';
+  if (!assistant.dataset.started) startChat();
+};
 
-  toggle.addEventListener('click', () => {
-    windowBox.style.display = windowBox.style.display === 'flex' ? 'none' : 'flex';
-    windowBox.style.flexDirection = 'column';
+let answers = {};
+let currentStep = 0;
+
+const steps = [
+  { id: 'name', type: 'text', q: "Hi 👋 I'm F‑LX. What's your name?" },
+  { id: 'service', type: 'select', q: "What service are you looking for?", options: ["Shopify Store Setup", "Facebook/TikTok Ads", "Email Automation", "Dropshipping Setup", "Automation Online Store", "Other"] },
+  { id: 'urgency', type: 'select', q: "How urgent is your project?", options: ["1 Week+", "3–5 Days", "ASAP (24–48h)"] },
+  { id: 'budget', type: 'select', q: "What’s your rough budget?", options: ["$300–$600", "$700–$1200", "$2000+", "Not sure yet"] },
+  { id: 'email', type: 'text', q: "What’s your best email?" }
+];
+
+function startChat() {
+  assistant.dataset.started = true;
+  showNext();
+}
+
+function showNext() {
+  if (currentStep >= steps.length) return finishChat();
+
+  const step = steps[currentStep];
+  const inputHTML = step.type === 'select'
+    ? `<select id="flx-input">${step.options.map(opt => `<option value='${opt}'>${opt}</option>`).join('')}</select>`
+    : `<input id="flx-input" type="text" placeholder="Type here...">`;
+
+  assistant.innerHTML += `<div class='msg msg-bot'>${step.q}</div>${inputHTML}<button class='submit-btn' onclick='submitAnswer()'>Next</button>`;
+}
+
+function submitAnswer() {
+  const step = steps[currentStep];
+  const input = document.getElementById('flx-input');
+  const value = input.value.trim();
+  if (!value) return alert("Please complete the field.");
+
+  answers[step.id] = value;
+  assistant.innerHTML += `<div class='msg msg-user'>${value}</div>`;
+  currentStep++;
+  setTimeout(showNext, 300);
+}
+
+function finishChat() {
+  const plan = answers.budget.includes("2000") ? "Boss Path ($2000+)" :
+               answers.budget.includes("700") ? "Builder Path ($700–$1200)" :
+               "Starter Path ($300–$600)";
+  const leadScore = (answers.urgency.includes("ASAP") ? 5 : 2) + (answers.budget.includes("700") || answers.budget.includes("2000") ? 3 : 1);
+
+  const summary = `Thanks ${answers.name}! Based on your needs, I recommend the <strong>${plan}</strong>. Want to chat more on WhatsApp?`;
+  const waLink = `https://wa.me/message/GFBML6FCFK35K1?text=${encodeURIComponent(`Hi, I'm ${answers.name}. Interested in: ${answers.service}. Budget: ${answers.budget}. Urgency: ${answers.urgency}. Email: ${answers.email}`)}`;
+
+  assistant.innerHTML += `<div class='msg msg-bot'>${summary}<br><a href='${waLink}' target='_blank' style='color:#38bdf8;'>Click to chat now</a></div>`;
+
+  // Send to backend
+  fetch("https://freelankarx-chatbot.onrender.com/lead", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      name: answers.name,
+      email: answers.email,
+      service: answers.service,
+      urgency: answers.urgency,
+      budget: answers.budget,
+      recommendation: plan,
+      score: leadScore
+    })
   });
-
-  document.getElementById('freelankarx-send').addEventListener('click', async () => {
-    const name = document.getElementById('chat-name').value;
-    const email = document.getElementById('chat-email').value;
-    const message = document.getElementById('chat-message').value;
-
-    const body = document.getElementById('freelankarx-body');
-    if (!message.trim()) return alert("Please enter a message.");
-
-    body.innerHTML += `<p><strong>You:</strong> ${message}</p>`;
-    body.innerHTML += `<p><em>Thinking...</em></p>`;
-
-    try {
-      const response = await fetch("https://freelankarx-chatbot.onrender.com/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message, email })
-      });
-      const data = await response.json();
-      const reply = data.reply || "Sorry, I couldn’t answer that.";
-
-      // Replace "Thinking..." with actual reply
-      const allParas = body.querySelectorAll('p');
-      allParas[allParas.length - 1].innerHTML = `<strong>Freelankarx AI:</strong> ${reply}`;
-
-    } catch (error) {
-      const allParas = body.querySelectorAll('p');
-      allParas[allParas.length - 1].innerHTML = `<strong>Freelankarx AI:</strong> Something went wrong.`;
-    }
-  });
+}
 </script>
-
 </body>
 </html>
