--- a/index.html
+++ b/index.html
@@ -507,11 +507,77 @@ Paste this entire code in your index.html before </body>
 </style>
 
 <div id="freelankarx-assistant">
+<!-- === Freelankarx Assistant V2 (Fixed Service + Other Input) === --><style>
+  #freelankarx-assistant {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+    z-index: 9999;
+    font-family: 'Segoe UI', sans-serif;
+  }
+  #flx-toggle {
+    background-color: #2c2c2c;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    font-size: 24px;
+    cursor: pointer;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+  }
+  #flx-window {
+    display: none;
+    width: 320px;
+    height: 500px;
+    background: #0f172a;
+    color: white;
+    border-radius: 15px;
+    overflow-y: auto;
+    flex-direction: column;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    padding: 10px;
+  }
+  #flx-window .msg {
+    margin: 8px 0;
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 90%;
+  }
+  .msg-bot {
+    background: #1e293b;
+    align-self: flex-start;
+  }
+  .msg-user {
+    background: #38bdf8;
+    color: black;
+    align-self: flex-end;
+  }
+  #flx-input {
+    margin-top: 10px;
+  }
+  select, input {
+    width: 100%;
+    margin: 5px 0;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+  }
+  button.submit-btn {
+    width: 100%;
+    padding: 8px;
+    background: #38bdf8;
+    color: black;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 5px;
+  }
+</style><div id="freelankarx-assistant">
   <button id="flx-toggle">💬</button>
   <div id="flx-window"></div>
-</div>
-
-<script>
+</div><script>
 const assistant = document.getElementById('flx-window');
 const toggle = document.getElementById('flx-toggle');
 toggle.onclick = () => {
@@ -522,6 +588,7 @@ toggle.onclick = () => {
 
 let answers = {};
 let currentStep = 0;
+let showOtherServiceStep = false;
 
 const steps = [
   { id: 'name', type: 'text', q: "Hi 👋 I'm F‑LX. What's your name?" },
@@ -537,11 +604,17 @@ function startChat() {
 }
 
 function showNext() {
+  if (showOtherServiceStep) {
+    assistant.innerHTML += `<div class='msg msg-bot'>Please describe the service you need:</div><input id="flx-input" type="text" placeholder="Custom service..."><button class='submit-btn' onclick='submitOtherService()'>Next</button>`;
+    showOtherServiceStep = false;
+    return;
+  }
+
   if (currentStep >= steps.length) return finishChat();
 
   const step = steps[currentStep];
   const inputHTML = step.type === 'select'
-    ? `<select id="flx-input">${step.options.map(opt => `<option value='${opt}'>${opt}</option>`).join('')}</select>`
+    ? `<select id="flx-input"><option value="">Select...</option>${step.options.map(opt => `<option value='${opt}'>${opt}</option>`).join('')}</select>`
     : `<input id="flx-input" type="text" placeholder="Type here...">`;
 
   assistant.innerHTML += `<div class='msg msg-bot'>${step.q}</div>${inputHTML}<button class='submit-btn' onclick='submitAnswer()'>Next</button>`;
@@ -555,14 +628,29 @@ function submitAnswer() {
 
   answers[step.id] = value;
   assistant.innerHTML += `<div class='msg msg-user'>${value}</div>`;
+
+  if (step.id === 'service' && value === 'Other') {
+    showOtherServiceStep = true;
+  } else {
+    currentStep++;
+  }
+
+  setTimeout(showNext, 300);
+}
+
+function submitOtherService() {
+  const input = document.getElementById('flx-input');
+  const value = input.value.trim();
+  if (!value) return alert("Please describe the service.");
+
+  answers.service = value;
+  assistant.innerHTML += `<div class='msg msg-user'>${value}</div>`;
   currentStep++;
   setTimeout(showNext, 300);
 }
 
 function finishChat() {
-  const plan = answers.budget.includes("2000") ? "Boss Path ($2000+)" :
-               answers.budget.includes("700") ? "Builder Path ($700–$1200)" :
-               "Starter Path ($300–$600)";
+  const plan = answers.budget.includes("2000") ? "Boss Path ($2000+)" : answers.budget.includes("700") ? "Builder Path ($700–$1200)" : "Starter Path ($300–$600)";
   const leadScore = (answers.urgency.includes("ASAP") ? 5 : 2) + (answers.budget.includes("700") || answers.budget.includes("2000") ? 3 : 1);
 
   const summary = `Thanks ${answers.name}! Based on your needs, I recommend the <strong>${plan}</strong>. Want to chat more on WhatsApp?`;
@@ -570,7 +658,6 @@ function finishChat() {
 
   assistant.innerHTML += `<div class='msg msg-bot'>${summary}<br><a href='${waLink}' target='_blank' style='color:#38bdf8;'>Click to chat now</a></div>`;
 
-  // Send to backend
   fetch("https://freelankarx-chatbot.onrender.com/lead", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
